# jupyter-sqlglot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/jupyter_sqlglot/: __init__.py  formatter.py  hooks.py  magics.py  utils.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
